# gtk2-compat

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
m4macros/: Makefile.am  gtk-2.0.m4.old1.patch
